--- a/ts/package.json
+++ b/ts/package.json
@@ -7,7 +7,7 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc --project tsconfig.build.json",
     "test": "npx jest"
   }
 }
